--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ header nav ul a{
 /*jambo*/
 .jambo{
   background-color: blue;
-  min-height: 300px;
+  min-height: 300px;      /*debug*/
   display: flex;
   justify-content: center;
   align-items: center;
@@ -70,7 +70,7 @@ header nav ul a{
   max-width: 1100px;
   margin: 0 auto;
   background-color: red;
-  min-height: 200px;
+  min-height: 200px;      /*debug*/
 }
 /*/jambo*/
 /*/header*/
@@ -80,7 +80,7 @@ header nav ul a{
 .study{
   display: flex;
   align-items: center;
-  min-height: 400px;
+  min-height: 400px;       /*debug*/
 }
 
 .container-study{
@@ -88,7 +88,7 @@ header nav ul a{
   max-width: 1100px;
   margin: 0 auto;
   background-color: green;
-  min-height: 300px;
+  min-height: 300px;      /*debug*/
   display: flex;
 }
 
@@ -107,7 +107,7 @@ main .study-text{
 .dove{
   display: flex;
   align-items: center;
-  min-height: 400px;
+  min-height: 400px;       /*debug*/
   background-color: lightgray;
 }
 
@@ -115,7 +115,7 @@ main .study-text{
   width: 80%;
   max-width: 1100px;
   margin: 0 auto;
-  min-height: 300px;
+  min-height: 300px;      /*debug*/
   display: flex;
 }
 
@@ -141,7 +141,7 @@ main .dove-text{
   width: 80%;
   max-width: 1100px;
   margin: 0 auto;
-  min-height: 300px;
+  min-height: 300px;      /*debug*/
   display: flex;
 }
 
@@ -159,7 +159,7 @@ main .fandom-text{
 /*tecnologia*/
 .tecnologia{
   background-color: lightgray;
-  min-height: 500px;
+  min-height: 500px;      /*debug*/
   display: flex;
   justify-content: center;
   align-items: center;
@@ -170,5 +170,87 @@ main .fandom-text{
   max-width: 1100px;
   margin: 0 auto;
   background-color: green;
-  min-height: 400px;
+  min-height: 400px;       /*debug*/
+}
+/*/tecnologia*/
+/*/main*/
+
+/*footer*/
+/*section-speak*/
+.speak{
+  display: flex;
+  align-items: center;
+  min-height: 500px;       /*debug*/
+  background-color: rgba(0, 0, 0, 0.921);
+}
+
+.container-speak{
+  width: 80%;
+  max-width: 1100px;
+  margin: 0 auto;
+  min-height: 450px;      /*debug*/
+  display: flex;
+  color: white;
+}
+
+footer .col-speak{
+  width: calc(100% - 760px);
+  background-color: rgb(24, 124, 191);
+}
+
+footer .prodotto{
+  width: 190px;
+  background-color: rgb(219, 144, 157);
+}
+
+footer .compagnia{
+  width: 190px;
+  background-color: rgb(219, 217, 144);
+}
+
+footer .risorse{
+  width: 190px;
+  background-color: rgb(156, 20, 166);
+}
+
+footer .norme{
+  width: 190px;
+  background-color: rgb(33, 96, 43);
+}
+/*/section-speak*/
+
+/*section-logo-footer*/
+.foot{
+  min-height: 100px;   /*debug*/
+  background-color: rgba(0, 0, 0, 0.921);
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+}
+
+.row-foot{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;     /*debug*/
+}
+
+.container-foot{
+  width: 80%;
+  max-width: 1100px;
+  margin: 0 auto;
+  background-color: yellow;
+  min-height: 50px;    /*debug*/
+}
+
+footer .foot-logo{
+  border: 1px solid black;
+  background-color: rgb(192, 83, 83);
+}
+
+footer .registrati{
+  border: 1px solid black;
+  background-color: rgb(192, 83, 83);
 }
